[gd_scene format=3 uid="uid://y7g340yx1mg3"]

[ext_resource type="Script" uid="uid://ckrfiji4ohs26" path="res://scripts/select_mask_fragment.gd" id="1_ymurh"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ymurh"]
load_path = "res://.godot/imported/mask.png-7a1b471f13f111416d7345a876394bc4.ctex"

[node name="SelectMaskFragment" type="Node2D" unique_id=973922542]
script = ExtResource("1_ymurh")

[node name="Button1" type="Button" parent="." unique_id=517778321]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 160.0
offset_top = 450.0
offset_right = 295.0
offset_bottom = 645.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Option1" type="Sprite2D" parent="Button1" unique_id=616937323]
z_index = 1
position = Vector2(67.5, 99)
texture = SubResource("CompressedTexture2D_ymurh")

[node name="MaskOption1" type="Sprite2D" parent="Button1" unique_id=832533523]
position = Vector2(67.5, 99)
texture = SubResource("CompressedTexture2D_ymurh")

[node name="Button2" type="Button" parent="." unique_id=663780118]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 570.0
offset_top = 450.0
offset_right = 705.0
offset_bottom = 647.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Option2" type="Sprite2D" parent="Button2" unique_id=792226385]
z_index = 1
position = Vector2(67.5, 99)
texture = SubResource("CompressedTexture2D_ymurh")

[node name="MaskOption2" type="Sprite2D" parent="Button2" unique_id=757785159]
position = Vector2(67.5, 99)
texture = SubResource("CompressedTexture2D_ymurh")

[node name="Button3" type="Button" parent="." unique_id=858707644]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 920.0
offset_top = 450.0
offset_right = 1057.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Option3" type="Sprite2D" parent="Button3" unique_id=1387813544]
z_index = 1
position = Vector2(67.5, 99)
texture = SubResource("CompressedTexture2D_ymurh")

[node name="MaskOption3" type="Sprite2D" parent="Button3" unique_id=775495739]
position = Vector2(67.5, 99)
texture = SubResource("CompressedTexture2D_ymurh")

[connection signal="button_down" from="Button1" to="." method="_on_button_1_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="Button3" to="." method="_on_button_3_button_down"]
